# schwifty-multiverse-c137

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
app/clients/: base_client.py  rick_and_morty_client.py
app/jobs/: char_counter.py  chars_on_object_counter.py  origins_extractor.py  time_reporter.py
app/models/: __init__.py  character.py  episode.py  location.py
app/services/: rick_and_morty_service.py
app/spec/clients/: test_base_client.py  test_rick_and_morty_client.py
app/spec/jobs/: test_time_reporter.py
app/spec/models/: test_character.py  test_episode.py  test_location.py
