[tool.poetry]
name = "schwifty-multiverse-c137"
version = "0.1.0"
description = ""
authors = ["Carlos Paredes <carlos@paredesrobles.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.0.291"
requests = "^2.31.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
pytest = "^7.4.2"
aioresponses = "^0.7.4"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
